# FDMS

./: .gitignore  README.md  STATE.md  package-lock.json  package.json
design/: README_FLITE_BRANDING_ASSETS.md
docs/: DESKTOP_PRODUCTIZATION_AUDIT.md  Flite Assurance Baseline.md  Pre V1.txt  quick-start.md  updater-validation.md  upgrades.txt  user-guide.md
docs/architecture/: DATA_INVENTORY.md
docs/data/: FDMS_AIRCRAFT_PILOTS.csv  FDMS_EGOW_CODES.csv
docs/history/: Project Overview.md
docs/js/: ui_liveboard.js
scripts/: install-latest-dev-build.ps1
src/: index.html
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/css/: vectair.css
src/data/: FDMS_EGOW_CODES.csv  FDMS_REGISTRATIONS.csv
src/js/: app.js  audit.js  datamodel.js  diagnostics.js  export_utils.js  metar_builder.js  reporting.js  storage.js  ui_booking.js  ui_liveboard.js  ui_reports.js  vkb.js
src/js/stores/: bookingsStore.js
tools/: gen_ico.py
