[package]
name = "vectair-flite"
version = "0.1.0"
description = "Vectair Flite — Flight Data Management System"
authors = ["Vectair"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vectair_flite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
